--- a/.github/workflows/ci-linter.yaml
+++ b/.github/workflows/ci-linter.yaml
@@ -20,8 +20,8 @@ jobs:
 
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        python -m pip install flake8
-    - name: Lint with flake8
+        python -m pip install -U pip
+        python -m pip install -r backend/lint-requirements.txt
+    - name: Run linter
       run: |
-        flake8 --exclude=migrations,__pycache__ --max-line-length 120
+        sh ./backend/scripts/run-linter.sh
